--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ header {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    margin-inline: 5px;
 }
 
 #scorelink {
