created question.js to store all questions, edited items in css and js, added question div in index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,8 @@ header {
     color: purple;
 }
 
-main {
+main, 
+div {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -38,6 +39,3 @@ button {
     color: white;
 }
 
-#quiz {
-    text-align: center;
-}
